Updated student directory, fixed mail pane colors, test fix for l33t style overflow issues.

--- a/styles/l33t/intrabox/intrabox.css
+++ b/styles/l33t/intrabox/intrabox.css
@@ -1,4 +1,12 @@
 @extend
+.boxes {
+	width: 320px;
+}
+@extend
+.boxes_noheader {
+	width: 320px;
+}
+@extend
 .intrabox {
 	background: #000000;
 	width: 320px;
